--- a/styles.css
+++ b/styles.css
@@ -425,7 +425,7 @@
     width: 80%;
   }
   
-  .skills-content .right .python::before {
+  .skills-content .right .react::before {
     width: 70%;
   }
 
